--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
             padding: 0;
         }
         body{
+            width:100vw;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             overflow: hidden;
-            background-color: #303F9F;
+            background-color: #101F38;
         }
         div{
+            position: absolute;
             display: flex;
             width: 100%;
             height: 80px;
             justify-content: space-around;
             font-size: 40px;
             align-items: center;
-        }
-        canvas{
-            margin-top: 10px;
-            border: solid black;
+            color: aliceblue;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
     </style>
     <title>pong</title>
